--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,17 +1,40 @@
 ---
 ---
 
-@article{di2020views,
-  title={Views on social media and its linkage to longitudinal data from two generations of a UK cohort study},
-  author={Di Cara, Nina H and Boyd, Andy and Tanner, Alastair R and Al Baghal, Tarek and Calderwood, Lisa and Sloan, Luke S and Davis, Oliver SP and Haworth, Claire MA},
-  journal={Wellcome Open Research},
+@article{shiells2022participant,
+  title={Participant acceptability of digital footprint data collection strategies: an exemplar approach to participant engagement and involvement in the ALSPAC birth cohort study.},
+  author={Shiells, Kate and Di Cara, Nina and Skatova, Anya and Davis, Oliver SP and Haworth, Claire MA and Skinner, Andrew L and Thomas, Richard G and Tanner, Alastair and Macleod, John AA and Timpson, Nicholas John and others},
+  journal={International Journal of Population Data Science},
   volume={5},
-  year={2020},
-  publisher={The Wellcome Trust},
-  selected={true},
-  abbr={WellcomeOpenRes},
+  number={3},
+  year={2022},
+  publisher={University of Wales, Swansea},
+  abbr={IJPDS},
   bibtex_show={true},
-  html={https://wellcomeopenresearch.org/articles/5-44}
+  html={https://research-information.bris.ac.uk/en/publications/participant-acceptability-of-digital-footprint-data-collection-st}
+}
+
+@article{di2021mental,
+  title={The mental health and well-being profile of young adults using social media},
+  author={Di Cara, Nina and Winstone, Lizzy and Sloan, Luke and Davis, Oliver and Haworth, Claire},
+  year={2021},
+  journal={Preprint},
+  publisher={PsyArXiv},
+  abbr={Preprint},
+  bibtex_show={true},
+  html={https://psyarxiv.com/3bqvz/}
+}
+
+@article{woolf2021investigating,
+  title={Investigating the transparency of reporting in two-sample summary data Mendelian randomization studies},
+  author={Woolf, Benjamin and Di Cara, Nina H and Stokoe, Chris Moreno and Skrivankova, Veronika and Drax, Katie and Higgins, Julian and Hemani, Gibran and Munafo, Marcus and Smith, George Davey and Yarmolinsky, James and others},
+  journal={Preprint},
+  year={2021},
+  publisher={medRxiv},
+  abbr={Preprint},
+  bibtex_show={true},
+  html={https://www.medrxiv.org/content/10.1101/2021.10.15.21264972v1.full.pdf+html}
+
 }
 
 @article{di2021mapping,
@@ -26,4 +49,17 @@
   abbr={IJPDS},
   bibtex_show={true},
   html={https://ijpds.org/article/view/1409}
+}
+
+@article{di2020views,
+  title={Views on social media and its linkage to longitudinal data from two generations of a UK cohort study},
+  author={Di Cara, Nina H and Boyd, Andy and Tanner, Alastair R and Al Baghal, Tarek and Calderwood, Lisa and Sloan, Luke S and Davis, Oliver SP and Haworth, Claire MA},
+  journal={Wellcome Open Research},
+  volume={5},
+  year={2020},
+  publisher={The Wellcome Trust},
+  selected={true},
+  abbr={WellcomeOpenRes},
+  bibtex_show={true},
+  html={https://wellcomeopenresearch.org/articles/5-44}
 }
