Add selected pubs to 'About'

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,8 @@
   publisher={University of Wales, Swansea},
   abbr={IJPDS},
   bibtex_show={true},
-  html={https://research-information.bris.ac.uk/en/publications/participant-acceptability-of-digital-footprint-data-collection-st}
+  html={https://research-information.bris.ac.uk/en/publications/participant-acceptability-of-digital-footprint-data-collection-st},
+  selected={true}
 }
 
 @article{di2021mental,
@@ -22,7 +23,8 @@
   publisher={PsyArXiv},
   abbr={Preprint},
   bibtex_show={true},
-  html={https://psyarxiv.com/3bqvz/}
+  html={https://psyarxiv.com/3bqvz/},
+  selected={true}
 }
 
 @article{woolf2021investigating,
