Revert "Add selected pubs to 'About'"
This reverts commit 87a2ab9e1bb34599cc3ddfe8e568a9e790f794c5.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,8 +11,7 @@
   publisher={University of Wales, Swansea},
   abbr={IJPDS},
   bibtex_show={true},
-  html={https://research-information.bris.ac.uk/en/publications/participant-acceptability-of-digital-footprint-data-collection-st},
-  selected={true}
+  html={https://research-information.bris.ac.uk/en/publications/participant-acceptability-of-digital-footprint-data-collection-st}
 }
 
 @article{di2021mental,
@@ -23,8 +22,7 @@
   publisher={PsyArXiv},
   abbr={Preprint},
   bibtex_show={true},
-  html={https://psyarxiv.com/3bqvz/},
-  selected={true}
+  html={https://psyarxiv.com/3bqvz/}
 }
 
 @article{woolf2021investigating,
