Add DEC preprint

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,19 @@
 ---
 ---
 
+@article{dec2022,
+  title={Data Ethics Club: creating a collaborative spaceto discuss data ethics},
+  author={Nina H. Di Cara and Natalie Zelenka and Huw Day and Euan D. S. Bennet and
+    Vanessa Hanschke and Valerio Maggio and Ola Michalec and Charles Radclyffe and Roman Shkunov and 
+    Emma Tonkin and Zoe Turner and Kamilla Wells},
+  year={2022},
+  journal={Preprint},
+  published={OSF Preprints},
+  abbr={Preprint},
+  bibtext_show={true},
+  html={10.31219/osf.io/4c6su},
+  selected={true}
+}
 
 @article{di2021mental,
   title={The mental health and well-being profile of young adults using social media},
