Fix name in ref

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{dec2022,
   title={Data Ethics Club: creating a collaborative spaceto discuss data ethics},
-  author={Nina H. Di Cara and Natalie Zelenka and Huw Day and Euan D. S. Bennet and
+  author={Di Cara, Nina and Natalie Zelenka and Huw Day and Euan D. S. Bennet and
     Vanessa Hanschke and Valerio Maggio and Ola Michalec and Charles Radclyffe and Roman Shkunov and 
     Emma Tonkin and Zoe Turner and Kamilla Wells},
   year={2022},
