--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   published={OSF Preprints},
   abbr={Preprint},
   bibtext_show={true},
-  html={10.31219/osf.io/4c6su},
+  html={https://osf.io/4c6su},
   selected={true}
 }
 
