Update woolf2022 reference

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,15 +27,16 @@
   selected={true}
 }
 
-@article{woolf2021investigating,
+@article{woolf2022investigating,
   title={Investigating the transparency of reporting in two-sample summary data Mendelian randomization studies},
   author={Woolf, Benjamin and Di Cara, Nina and Stokoe, Chris Moreno and Skrivankova, Veronika and Drax, Katie and Higgins, Julian and Hemani, Gibran and Munafo, Marcus and Smith, George Davey and Yarmolinsky, James and others},
-  journal={Preprint},
-  year={2021},
-  publisher={medRxiv},
-  abbr={Preprint},
+  journal={International Journal of Epidemiology},
+  year={2022},
+  publisher={Oxford University Press},
+  abbr={IJE},
   bibtex_show={true},
-  html={https://www.medrxiv.org/content/10.1101/2021.10.15.21264972v1.full.pdf+html}
+  doi={10.1093/ije/dyac074},
+  html={https://academic.oup.com/ije/advance-article/doi/10.1093/ije/dyac074/6564099}
 
 }
 
