npj paper accepted

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,13 +15,13 @@
   selected={true}
 }
 
-@article{di2021mental,
+@article{di2022mental,
   title={The mental health and well-being profile of young adults using social media},
   author={Di Cara, Nina and Winstone, Lizzy and Sloan, Luke and Davis, Oliver and Haworth, Claire},
-  year={2021},
-  journal={Preprint},
-  publisher={PsyArXiv},
-  abbr={Preprint},
+  year={2022},
+  journal={npj Mental Health Research},
+  publisher={Springer Nature},
+  abbr={npj Mental Health Res},
   bibtex_show={true},
   html={https://psyarxiv.com/3bqvz/},
   selected={true}
