Update accepted paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,9 +7,9 @@
     Vanessa Hanschke and Valerio Maggio and Ola Michalec and Charles Radclyffe and Roman Shkunov and 
     Emma Tonkin and Zoe Turner and Kamilla Wells},
   year={2022},
-  journal={Preprint},
-  published={OSF Preprints},
-  abbr={Preprint},
+  journal={Patterns},
+  publisher={Cell Press},
+  abbr={Patterns},
   bibtext_show={true},
   html={https://osf.io/4c6su},
   selected={true}
