--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,8 +11,10 @@
   publisher={Cell Press},
   abbr={Patterns},
   bibtext_show={true},
-  html={https://osf.io/4c6su},
-  selected={true}
+  html={https://www.cell.com/patterns/fulltext/S2666-3899(22)00134-9},
+  selected={true},
+  volume={3},
+  issue={7}
 }
 
 @article{di2022mental,
