Add npj article details

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,8 +25,10 @@
   publisher={Springer Nature},
   abbr={npj Mental Health Res},
   bibtex_show={true},
-  html={https://psyarxiv.com/3bqvz/},
-  selected={true}
+  html={https://www.nature.com/articles/s44184-022-00011-w},
+  selected={true},
+  volume={1},
+  issue={11}
 }
 
 @article{woolf2022investigating,
