Add name initials OSPD CMAH

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{dicara2022review,
   title={Methodologies for monitoring mental health on Twitter: systematic review},
-  author={Di Cara, Nina and Maggio, Valerio and Davis, Oliver and Haworth, Claire},
+  author={Di Cara, Nina and Maggio, Valerio and Davis, Oliver SP and Haworth, Claire MA},
   year={2022},
   journal={OSF Preprints},
   html={https://osf.io/4sne7/},
@@ -28,7 +28,7 @@
 
 @article{dicara2022mental,
   title={The mental health and well-being profile of young adults using social media},
-  author={Di Cara, Nina and Winstone, Lizzy and Sloan, Luke and Davis, Oliver and Haworth, Claire},
+  author={Di Cara, Nina and Winstone, Lizzy and Sloan, Luke and Davis, Oliver SP and Haworth, Claire MA},
   year={2022},
   journal={npj Mental Health Research},
   publisher={Springer Nature},
