--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@article{tanner2023,
+  title={Software Profile: Epicosm — a framework for linking online social media in epidemiological cohorts},
+  author={Tanner, Alastair and Di Cara, Nina and Maggio, Valerio and Thomas, Richard and Boyd, Andy and Sloan, Luke and Al Baghal, Tarek
+  and MacLeod, JA and Haworth, Claire and Davis, Oliver},
+  year={2023},
+  journal={International Journal of Epidemiology},
+  abbr={IJE},
+  }
+
 @article{dicara2022review,
   title={Methodologies for monitoring mental health on Twitter: systematic review},
   author={Di Cara, Nina and Maggio, Valerio and Davis, Oliver SP and Haworth, Claire MA},
