--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,14 @@
 ---
 ---
 
+@article{dicara2022thesis,
+  title = {Mental health data science in rich longitudinal cohort studies},
+  author = {Di Cara, Nina},
+  year = {2022},
+  journal = {{PhD Thesis - University of Bristol}},
+  html = {https://research-information.bris.ac.uk/en/studentTheses/mental-health-data-science-in-rich-longitudinal-cohort-studies}
+}
+
 @article{tanner2023,
   title={Software Profile: Epicosm — a framework for linking online social media in epidemiological cohorts},
   author={Tanner, Alastair and Di Cara, Nina and Maggio, Valerio and Thomas, Richard and Boyd, Andy and Sloan, Luke and Al Baghal, Tarek
