Add new articles

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,15 +16,20 @@
   year={2023},
   journal={International Journal of Epidemiology},
   abbr={IJE},
+  html={https://academic.oup.com/ije/advance-article/doi/10.1093/ije/dyad020/7058977},
+  doi={10.1093/ije/dyad020},
+  pages={dyad020},
+  bibtex_show={true}
   }
 
-@article{dicara2022review,
+@article{dicara2023review,
   title={Methodologies for monitoring mental health on Twitter: systematic review},
   author={Di Cara, Nina and Maggio, Valerio and Davis, Oliver SP and Haworth, Claire MA},
-  year={2022},
-  journal={OSF Preprints},
-  html={https://osf.io/4sne7/},
-  selected={true}
+  year={2023},
+  journal={Journal of Medical Internet Research},
+  html={},
+  selected={true},
+  abbr={JMIR}
 }
 
 @article{dec2022,
