Add data hazards preprint

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@article{datahazardsv1,
+  title = {Data Hazards v1.0: an open-source vocabulary of ethical hazards for data-intensive projects},
+  author = {Natalie Zelenka and Nina Di Cara and Euan Bennet and Vanessa Aisyahsari Hanschke and 
+  Emma Kuwertz and Ismael Kherroubi Garcia and Susana Roman Garcia},
+  year = {2023},
+  journal = {Preprint},
+  html = {https://osf.io/hzmyp/},
+  selected = {true}
+}
+
 @article{dicara2022thesis,
   title = {Mental health data science in rich longitudinal cohort studies},
   author = {Di Cara, Nina},
