--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,8 +3,8 @@
 
 @article{datahazardsv1,
   title = {Data Hazards v1.0: an open-source vocabulary of ethical hazards for data-intensive projects},
-  author = {Natalie Zelenka and Nina Di Cara and Euan Bennet and Vanessa Aisyahsari Hanschke and 
-  Emma Kuwertz and Ismael Kherroubi Garcia and Susana Roman Garcia},
+  author = {Zelenka, Natalie and Di Cara, Nina and Bennet, Euan and Hanschke, Vanessa Aisyahsari and 
+  Kuwertz, Emma and Kherroubi Garcia, Ismael and Roman Garcia, Susana },
   year = {2023},
   journal = {Preprint},
   html = {https://osf.io/hzmyp/},
