Add synth bio paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@article{zelenka2024data,
+  title={Data hazards in synthetic biology},
+  author={Zelenka, Natalie R and Di Cara, Nina and Sharma, Kieren and Sarvaharman, Seeralan and Ghataora, Jasdeep S and Parmeggiani, Fabio and Nivala, Jeff and Abdallah, Zahraa S and Marucci, Lucia and Gorochowski, Thomas E},
+  journal={Synthetic Biology},
+  pages={ysae010},
+  year={2024},
+  publisher={Oxford University Press UK},
+  doi= {10.1093/synbio/ysae010},
+  html={https://doi.org/10.1093/synbio/ysae010}
+}
+
 @article{datahazardsv1,
   title = {Data Hazards v1.0: an open-source vocabulary of ethical hazards for data-intensive projects},
   author = {Zelenka, Natalie and Di Cara, Nina and Bennet, Euan and Hanschke, Vanessa Aisyahsari and 
